All_Component_DX/force-app/main/default/objects/SM_Change_Order_Log__c/fields/SM_Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>SM_Batch_Id__c</fullName>
    <description>This field is used to store the batch id to track the status of the Batch job.</description>
    <inlineHelpText>This field is used to store the batch id to track the status of the Batch job.</inlineHelpText>
    <label>Batch Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>