All_Component_DX/force-app/main/default/objects/SM_Change_Order_Log__c/fields/SM_Log_Details__c.field-meta.xml
<CustomField>
    <fullName>SM_Log_Details__c</fullName>
    <description>This field is used to capture the log details of the Batch job.</description>
    <inlineHelpText>This field is used to capture the log details of the Batch job.</inlineHelpText>
    <label>Log Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>