All_Component_DX/force-app/main/default/objects/SM_Change_Order_Log__c/fields/SM_Log_Type__c.field-meta.xml
<CustomField>
    <fullName>SM_Log_Type__c</fullName>
    <description>This field is used to indicate the type of generated log.</description>
    <inlineHelpText>This field is used to indicate the type of generated log.</inlineHelpText>
    <label>Log Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FCO Line Generation</fullName>
            </value>
            <value>
                <fullName>WO Generation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>