All_Component_DX/force-app/main/default/objects/SM_Change_Order_Log__c/fields/SM_Started_On__c.field-meta.xml
<CustomField>
    <fullName>SM_Started_On__c</fullName>
    <description>This field is used to capture the start time of the Batch job.</description>
    <inlineHelpText>This field is used to capture the start time of the Batch job.</inlineHelpText>
    <label>Started On</label>
    <type>DateTime</type>
</CustomField>